# comex-fetcher

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
comexdown/: __init__.py  cli.py  constants.py  download.py  storage.py  urls.py
compat/comexdown/: README.md  pyproject.toml
compat/comexdown/src/comexdown/: __init__.py
src/comex_fetcher/: __init__.py  cli.py  constants.py  download.py  plugin.py  storage.py  urls.py
src/comexdown/: __init__.py  cli.py  download.py  storage.py
tests/: test_cli.py  test_comex_fetcher.py  test_download.py  test_storage.py  test_urls.py
