[project]
name = "comex-fetcher"
version = "1.5.2"
description = "A commandline utility to download Brazil's foreign trade data"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "quantilica-core @ git+https://github.com/Quantilica/quantilica-core.git",
]

[project.urls]
Homepage = "https://github.com/Quantilica/comex-fetcher"
Repository = "https://github.com/Quantilica/comex-fetcher"
Issues = "https://github.com/Quantilica/comex-fetcher/issues"

[project.scripts]
comex-fetcher = "comex_fetcher.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/comex_fetcher"]

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "I", "UP", "B"]

[tool.uv.sources]
quantilica-core = { path = "../quantilica-core", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
