[project]
name = "comexdown"
version = "2.0.0"
description = "Deprecated: comexdown has been renamed to comex-fetcher. This package re-exports comex-fetcher for backwards compatibility."
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["comex-fetcher"]

[project.urls]
Homepage = "https://github.com/Quantilica/comex-fetcher"
Repository = "https://github.com/Quantilica/comex-fetcher"

[tool.hatch.build.targets.wheel]
packages = ["src/comexdown"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
